// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button respects the "disabled" prop 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  color: #24292e;
  background-color: #fafbfc;
  border: 1px solid #e1e4e8;
  box-shadow: 0px 1px 0px rgba(149,157,165,0.1),inset 0px 2px 0px rgba(255,255,255,0.25);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:focus,
.c0:active {
  z-index: 1;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #F3F4F6;
  box-shadow: 0px 1px 0px rgba(209,213,218,0.2),inset 0px 2px 0px rgba(255,255,255,0.1);
}

.c0:focus {
  border-color: transparent;
  box-shadow: 0 0 0 3px rgba(3,102,214,0.3);
}

.c0:active {
  background-color: #F3F4F6;
  box-shadow: inset 0px 2px 0px rgba(149,157,165,0.1);
  border-color: #d1d5da;
}

.c0:disabled {
  color: #959da5;
  background-color: #fafbfc;
  border-color: #eaecef;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonDanger renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  color: #cb2431;
  border: 1px solid #e1e4e8;
  background-color: #fafbfc;
  box-shadow: 0px 1px 0px rgba(149,157,165,0.1),inset 0px 2px 0px rgba(255,255,255,0.25);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:focus,
.c0:active {
  z-index: 1;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  color: #fff;
  background-color: #cb2431;
  border-color: #b31d28;
  box-shadow: 0px 1px 0px rgba(149,157,165,0.1),inset 0px 2px 0px rgba(255,255,255,0.03);
}

.c0:focus {
  border-color: transparent;
  box-shadow: 0 0 0 3px rgba(203,36,49,0.4);
}

.c0:active {
  color: #fff;
  background-color: #cb2431;
  box-shadow: inset 0px 2px 0px rgba(179,29,40,0.4);
  border-color: #9e1c23;
}

.c0:disabled {
  color: rgba(203,36,49,.5);
  background-color: #F3F4F6;
  border: 1px solid #e1e4e8;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonOutline renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  color: #005cc5;
  border: 1px solid #e1e4e8;
  background-color: #fafbfc;
  box-shadow: 0px 1px 0px rgba(149,157,165,0.1),inset 0px 2px 0px rgba(255,255,255,0.25);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:focus,
.c0:active {
  z-index: 1;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  color: #fff;
  background-color: #0366d6;
  border-color: #005cc5;
  box-shadow: 0px 1px 0px rgba(149,157,165,0.1),inset 0px 2px 0px rgba(255,255,255,0.03);
}

.c0:focus {
  border-color: transparent;
  box-shadow: 0 0 0 3px rgba(3,102,214,0.3);
}

.c0:active {
  color: #fff;
  background-color: #0366d6;
  border-color: rgba(4,66,137,.5);
  box-shadow: inset 0px 1px 0px rgba(4,66,137,0.2);
}

.c0:disabled {
  color: #959da5;
  border-color: #e1e4e8;
  background-color: #F3F4F6;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonPrimary renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  color: #fff;
  background-color: #159739;
  border: 1px solid #22863a;
  box-shadow: 0px 1px 0px rgba(20,70,32,0.1),inset 0px 2px 0px rgba(255,255,255,0.03);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:focus,
.c0:active {
  z-index: 1;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #138934;
  border-color: #176f2c;
}

.c0:focus {
  border-color: transparent;
  box-shadow: 0 0 0 3px #94D3A2;
  background-color: #138934;
}

.c0:active {
  background-color: #138934;
  box-shadow: inset 0px 1px 0px rgba(20,70,32,0.2);
  border-color: #176f2c;
}

.c0:disabled {
  color: rgba(255,255,255,0.50);
  background-color: #94D3A2;
  border-color: rgba(34,134,58,0.1);
}

<button
  className="c0"
  disabled={true}
/>
`;
